--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
+    <!-- Favicon -->
+    <link rel="icon" href="/lovable-uploads/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/lovable-uploads/favicon.ico" type="image/x-icon" />
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin="" />
